[package]
name = "adyen"
version = "0.1.8"
edition = "2021"
license = "MIT"
description = "A library for integrating with the Adyen payment provider."
repository = "https://github.com/third-act/adyen/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "native-tls"] }
base64 = "0.12.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
rust_decimal = "1.8.1"
chrono = { version = "0.4.19", features = ["serde"] }
md-5 = "0.10.5"
hex = "0.4.3"
